2016-05-30  Alexander Monakov  <amonakov@ispras.ru>
	    Marc Glisse  <marc.glisse@inria.fr>

	PR tree-optimization/71289
	* match.pd (-1 / B < A, A > -1 / B): New transformations.

2016-05-30  Jan Hubicka  <hubicka@ucw.cz>

	* tree-vect-loop.c (vect_transform_loop): Update likely bounds.

2016-05-30  Jan Hubicka  <hubicka@ucw.cz>

	* tree-ssa-loop-ivcanon.c (try_peel_loop): Correctly set wont_exit
	for peeled copies; avoid underflow when updating estimates; correctly
	scale loop profile.

2016-05-30  Kugan Vivekanandarajah  <kuganv@linaro.org>

	* tree-ssa-reassoc.ci (swap_ops_for_binary_stmt): Fix typo from commit
	r236875. Corrected oe3 to oe2 as obvious.

2016-05-30  Kugan Vivekanandarajah  <kuganv@linaro.org>

	PR middle-end/71269
	PR middle-end/71252
	* tree-ssa-reassoc.c (insert_stmt_before_use): Use find_insert_point so
	that inserted stmt will not dominate stmts that defines its operand.
	(rewrite_expr_tree): Add stmt_to_insert before adding the use stmt.
	(rewrite_expr_tree_parallel): Likewise.

2016-05-30  Kugan Vivekanandarajah  <kuganv@linaro.org>

	PR middle-end/71252
	* tree-ssa-reassoc.c (swap_ops_for_binary_stmt): Fix swap such that
	all fields including stmt_to_insert are swapped.

2016-05-30  Jan Hubicka  <hubicka@ucw.cz>

	* predict.h (force_edge_cold): Declare.
	* predict.c (force_edge_cold): New function.
	* tree-ssa-loop-ivcanon.c (try_unroll_loop_completely): Fix profile
	updating.
	(canonicalize_loop_induction_variables): Fix formating.

2016-05-30  Eric Botcazou  <ebotcazou@adacore.com>

	* config/visium/visium.c (visium_split_double_add): Minor tweaks.
	(visium_expand_copysign): Use gen_int_mode directly.
	(visium_compute_frame_size): Minor tweaks.

2016-05-30  Jan Hubicka  <hubicka@ucw.cz>

	* tree-vect-loop.c (vect_analyze_loop_2): Use
	likely_max_stmt_executions_int.

2016-05-30  Tom de Vries  <tom@codesourcery.com>

	PR tree-optimization/69067
	* graphite-isl-ast-to-gimple.c (get_def_bb_for_const): Remove assert.
